# toolbox

./: Cargo.toml  README.md
src/: lib.rs  main.rs  util.rs
src/cli/: gen.rs
src/generator/: mod.rs  password.rs  uuid.rs
