[package]
name = "rucksack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4"